# gaussian-splatting

./: .gitignore  pyproject.toml  train.py  train_to_match.py
scene/: cameras.py  gaussian_model.py
