[project]
name = "gaussian_qem"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.10.8",
  "ninja>=1.13.0",
  "opencv-python>=4.13.0.90",
  "plyfile>=1.1.3",
  "torch>=2.10.0",
  "torchvision>=0.22.1",
  "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
